mudanca na logo

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </button>
             <a class="navbar-brand" href="#">
               <img src="img/Logo_Hellen.jpg" class="logo">
-              <a href="" class="spanlogo">Helen </a>
+              <span class="logo">Helen Arquiteta</span>
             </a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
