modificacao das fontes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
       <title>Hellen Costa - Arquiteta de Designe de Interiores</title>
 
+      <!-- fonte core CSS -->      
+      <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+      
       <!-- Bootstrap core CSS -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -71,6 +74,7 @@
           </div>
           <div class="col-md-6">
             <h2>Trabalhos (Instagran)</h2>
+            <img src="img/template_instagram.jpg" width="100%">
           </div>
         </div>
       </div>
