mudanca no footer1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- fonte core CSS -->      
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-      
+
       <!-- Bootstrap core CSS -->
       <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -82,13 +82,13 @@
       <footer class="footer">
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
-              <img src="img/Logo_Hellen.jpg" class="logo">
-              Hellen Costa
+            <div class="col-md-4 text-center">
+              <img src="img/Logo_Hellen.jpg" class="logo"><br>
+              <span class="logo">Helen Arquiteta</span>
             </div>
             <div class="col-md-4">
               <ul>
-                <li class="active"><a href="#">Bem Vindo</a></li>
+                <li><a href="#">Bem Vindo</a></li>
                 <li><a href="#about">Consultoria Online</a></li>
                 <li><a href="#contact">Sobre Nós</a></li>
                 <li><a href="#contact">Trabalhos</a></li>
