modificacao no tamanho do footer

--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
               </ul>
             </div>
             <div class="col-md-4">
-              Telefone <br>
-              <span>
-                (61) xxxx-xxxx
-              </span>
+              <div class="footer_telefone text-center">
+                Telefone <br>
+                <span>
+                  (61) xxxx-xxxx
+                </span>
+              </div>
             </div>
           </div>
           <p class="text-muted text-center">Todos os direitos reservados &copy 2017 </p>
