--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </button>
             <a class="navbar-brand" href="#">
               <img src="img/Logo_Hellen.jpg" class="logo">
-              <span class="logo">Helen Arquiteta</span>
+              <span class="logo">Hellen Arquiteta</span>
             </a>
           </div>
           <div id="navbar" class="collapse navbar-collapse">
@@ -84,7 +84,7 @@
           <div class="row">
             <div class="col-md-4 text-center">
               <img src="img/Logo_Hellen.jpg" class="logo"><br>
-              <span class="logo">Helen Arquiteta</span>
+              <span class="logo">Hellen Arquiteta</span>
             </div>
             <div class="col-md-4">
               <ul>
