mudanca para smartphones e tablets

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <img src="img/Logo_Hellen.jpg" class="logo"><br>
               <span class="logo">Hellen Arquiteta</span>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 linha">
               <ul>
                 <li><a href="#">Bem Vindo</a></li>
                 <li><a href="#about">Consultoria Online</a></li>
