--- a/index.html
+++ b/index.html
@@ -65,16 +65,21 @@
       </nav>
 
       <!-- Begin page content -->
-      <img src="img/bg_home.jpg" width="100%">
+      <div class="conta-fluid img_home">
+        <div>
+          Arquitetura e Design <br>
+          conforme o seu gosto 
+        </div>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2>Sobre nós</h2>
-            <p>Lorem ipsum dolor sit amet, justo aliquet in erat luctus consectetuer. Justo quis lobortis quis purus quam vitae, eleifend vestibulum nam nullam massa ac, est diam pede libero maecenas arcu, habitasse porta a quisquam eu id volutpat, vel enim. Suspendisse nunc vitae mauris, in a pretium nunc dolor ornare taciti. Malesuada bibendum metus quis, a egestas id ligula pretium porta, volutpat egestas, ante sodales tellus augue augue lacus pede. Natoque lobortis diam ultrices praesent cubilia, ut mattis lorem sunt hendrerit praesent et, lacinia ipsum. Non consequat arcu, vitae velit dolor, felis molestie sed nullam odio dictum. Donec est fusce est amet mauris atque. Et ultricies lectus sodales ligula sed mauris, sit mattis wisi consequat explicabo nunc pede, tincidunt felis torquent amet quam massa risus, vitae ut donec quis. Donec sem a in urna justo, nulla libero sit, justo vivamus tortor. Semper do pulvinar dapibus vulputate facilisis dui, gravida eget curabitur commodo nullam interdum semper, sit pede vehicula pharetra dolor velit, pretium aliquam lorem, risus quis est et.</p>
+            <h2 class="subititulo">Sobre nós</h2>
+            <p class="paragrafo">Lorem ipsum dolor sit amet, justo aliquet in erat luctus consectetuer. Justo quis lobortis quis purus quam vitae, eleifend vestibulum nam nullam massa ac, est diam pede libero maecenas arcu, habitasse porta a quisquam eu id volutpat, vel enim. Suspendisse nunc vitae mauris, in a pretium nunc dolor ornare taciti. Malesuada bibendum metus quis, a egestas id ligula pretium porta, volutpat egestas, ante sodales tellus augue augue lacus pede. Natoque lobortis diam ultrices praesent cubilia, ut mattis lorem sunt hendrerit praesent et, lacinia ipsum. Non consequat arcu, vitae velit dolor, felis molestie sed nullam odio dictum. Donec est fusce est amet mauris atque. Et ultricies lectus sodales ligula sed mauris, sit mattis wisi consequat explicabo nunc pede, tincidunt felis torquent amet quam massa risus, vitae ut donec quis. Donec sem a in urna justo, nulla libero sit, justo vivamus tortor. Semper do pulvinar dapibus vulputate facilisis dui, gravida eget curabitur commodo nullam interdum semper, sit pede vehicula pharetra dolor velit, pretium aliquam lorem, risus quis est et.</p>
           </div>
           <div class="col-md-6">
-            <h2>Trabalhos (Instagran)</h2>
-            <img src="img/template_instagram.jpg" width="100%">
+            <h2 class="subititulo">Trabalhos (Instagran)</h2>
+            <img src="img/template_instagram.jpg" class="img_home">
           </div>
         </div>
       </div>
