opacidade da imagem de fundo

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 
       <!-- Begin page content -->
       <div class="conta-fluid img_home">
-        <div>
-          Arquitetura e Design <br>
-          conforme o seu gosto 
+        <div class="container">
+          <div class="text_home">
+            Arquitetura e Design <br>
+            conforme o seu gosto 
+          </div>
         </div>
       </div>
       <div class="container">
