--- a/index.html
+++ b/index.html
@@ -65,12 +65,10 @@
       </nav>
 
       <!-- Begin page content -->
-      <div class="conta-fluid img_home">
-        <div class="container">
+      <div class="container-fluid img_home" >
           <div class="text_home">
             Arquitetura e Design <br>
             conforme o seu gosto 
-          </div>
         </div>
       </div>
       <div class="container">
