--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -53,7 +53,7 @@
           </div>
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="#">Bem Vindo</a></li>
+              <li><a href="index.html">Bem Vindo</a></li>
               <li><a href="consultoria.html">Consultoria Online</a></li>
               <li><a href="sobre_nos.html">Sobre Nós</a></li>
               <li><a href="trabalhos.html">Trabalhos</a></li>
@@ -64,61 +64,25 @@
         </div>
       </nav>
 
-      <!-- Begin page content -->
-      <div class="container-fluid img_home" >
-          <div class="text_home">
-            Arquitetura e Design <br>
-            conforme o seu gosto 
-        </div>
-      </div>
-      <div class="container">
+      <div class="container sobre_nos">
         <div class="row">
           <div class="col-md-6">
             <h2 class="subititulo">Sobre nós</h2>
             <p class="paragrafo">Lorem ipsum dolor sit amet, justo aliquet in erat luctus consectetuer. Justo quis lobortis quis purus quam vitae, eleifend vestibulum nam nullam massa ac, est diam pede libero maecenas arcu, habitasse porta a quisquam eu id volutpat, vel enim. Suspendisse nunc vitae mauris, in a pretium nunc dolor ornare taciti. Malesuada bibendum metus quis, a egestas id ligula pretium porta, volutpat egestas, ante sodales tellus augue augue lacus pede. Natoque lobortis diam ultrices praesent cubilia, ut mattis lorem sunt hendrerit praesent et, lacinia ipsum. Non consequat arcu, vitae velit dolor, felis molestie sed nullam odio dictum. Donec est fusce est amet mauris atque. Et ultricies lectus sodales ligula sed mauris, sit mattis wisi consequat explicabo nunc pede, tincidunt felis torquent amet quam massa risus, vitae ut donec quis. Donec sem a in urna justo, nulla libero sit, justo vivamus tortor. Semper do pulvinar dapibus vulputate facilisis dui, gravida eget curabitur commodo nullam interdum semper, sit pede vehicula pharetra dolor velit, pretium aliquam lorem, risus quis est et.</p>
           </div>
           <div class="col-md-6">
-            <h2 class="subititulo">Trabalhos (Instagran)</h2>
-            <img src="img/template_instagram.jpg" class="img_home">
+            <img src="img/foto.png" class="img_home">
           </div>
         </div>
       </div>
 
-      <footer class="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 text-center">
-              <img src="img/Logo_Hellen.jpg" class="logo"><br>
-              <span class="logo">Hellen Arquiteta</span>
-            </div>
-            <div class="col-md-4 linha">
-              <ul>
-                <li><a href="#">Bem Vindo</a></li>
-                <li><a href="#about">Consultoria Online</a></li>
-                <li><a href="#contact">Sobre Nós</a></li>
-                <li><a href="#contact">Trabalhos</a></li>
-                <li><a href="#contact">Parceiros</a></li>
-                <li><a href="#contact">Contato</a></li>
-              </ul>
-            </div>
-            <div class="col-md-4">
-              <div class="footer_telefone text-center">
-                Telefone <br>
-                <span>
-                  (61) xxxx-xxxx
-                </span>
-              </div>
-            </div>
-          </div>
-          <p class="text-muted text-center">Todos os direitos reservados &copy 2017 </p>
-        </div>
-      </footer>
-      <!-- Bootstrap core JavaScript
+
+       <!-- Bootstrap core JavaScript
       ================================================== -->
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <script src="js/ie10-viewport-bug-workaround.js"></script>
-    </body>
-  </html>
+</body>
+</html>
