finalizacao pagina sobre nos

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -74,7 +74,57 @@
             <img src="img/foto.png" class="img_home">
           </div>
         </div>
-      </div>
+
+        <h2>Trabalhamos com:</h2>
+        <div class="row">
+          <div class="col-md-4 text-center">
+            <img src="img/cruz.png"><br>
+            <h2>Projetos Hospitalares</h2>
+          </div>
+          <div class="col-md-4 text-center">
+              <img src="img/sofa.png"><br>
+              <h2>Designe de Interiores</h2>
+          </div>
+          <div class="col-md-4 text-center">
+              <img src="img/cenografia.png"><br>
+              <h2>Cenografia</h2>
+          </div>
+        </div> <!-- fim row trabalhamos com: -->
+
+      </div><!-- fim container -->
+
+
+
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 text-center">
+              <img src="img/Logo_Hellen.jpg" class="logo"><br>
+              <span class="logo">Hellen Arquiteta</span>
+            </div>
+            <div class="col-md-4 linha">
+              <ul>
+                <li><a href="#">Bem Vindo</a></li>
+                <li><a href="#about">Consultoria Online</a></li>
+                <li><a href="#contact">Sobre Nós</a></li>
+                <li><a href="#contact">Trabalhos</a></li>
+                <li><a href="#contact">Parceiros</a></li>
+                <li><a href="#contact">Contato</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <div class="footer_telefone text-center">
+                Telefone <br>
+                <span>
+                  (61) xxxx-xxxx
+                </span>
+              </div>
+            </div>
+          </div>
+          <p class="text-muted text-center">Todos os direitos reservados &copy 2017 </p>
+        </div>
+      </footer><!-- fim footer -->
+
 
 
        <!-- Bootstrap core JavaScript
