--- a/contato.html
+++ b/contato.html
@@ -68,23 +68,39 @@
           <div class="row">
               <h1>Contato:</h1>
               <div class="col-sm-6">
-                Email:<br>
-                Contato@helencosta.com.br<br><br>
-                Watts:<br>
-                (61) xxxx-xxxx
+                <div class="contato_destaque">
+                  <h3>Email:</h3>
+                  <p>Contato@helencosta.com.br</p>
+                </div>
+                <br><br>
+                <div class="contato_destaque">
+                  <h3>Watts:</h3>
+                  <p>(61) xxxx-xxxx</p>
+                </div>
               </div>
               <div class="col-sm-6">
-                Telefone:<br>
-                (61) xxxx-xxxx <br>
-                <br>
+                <div class="contato_destaque">
+                  <h3>Telefone:</h3>
+                  <p>(61) xxxx-xxxx </p>
+                </div>
+                <br><br>
 
-                Estamos abertos:<br>
-                Seg a Sext: 09:00 as 18:00<br>
-                Sab: 09:00 as 12:00<br>
+                <div class="contato_horario">
+                  <h3>Estamos abertos:</h3>
+                  <p>
+                    Seg a Sext: 09:00 as 18:00<br>
+                    Sab: 09:00 as 12:00<br>
+                  </p>
+                </div>
                 <br>
-                <br>
-                Siganos:<br>
-                FB , INSTAGRA
+                <div class="contato_horario">
+                  <h3>Siganos:</h3>
+                  <p>
+                    <img src="img/logo_facebook.png">
+                    <img src="img/logo_instagram.png">
+                  </p>
+                </div>
+                
               </div>
           </div>
 
