mudanca para tela de smarphones na pagina contato

--- a/contato.html
+++ b/contato.html
@@ -69,33 +69,29 @@
               <h1>Contato:</h1>
               <div class="col-sm-6">
                 <div class="contato_destaque">
-                  <h3>Email:</h3>
-                  <p>Contato@helencosta.com.br</p>
+                  <h3 class="contato_h3">Email:</h3>
+                  <p class="contato_p">Contato@helencosta.com.br</p>
                 </div>
-                <br><br>
                 <div class="contato_destaque">
-                  <h3>Watts:</h3>
-                  <p>(61) xxxx-xxxx</p>
+                  <h3 class="contato_h3">Watts:</h3>
+                  <p class="contato_p">(61) xxxx-xxxx</p>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="contato_destaque">
-                  <h3>Telefone:</h3>
-                  <p>(61) xxxx-xxxx </p>
+                  <h3 class="contato_h3">Telefone:</h3>
+                  <p class="contato_p">(61) xxxx-xxxx </p>
                 </div>
-                <br><br>
-
                 <div class="contato_horario">
-                  <h3>Estamos abertos:</h3>
-                  <p>
+                  <h3 class="contato_h3">Estamos abertos:</h3>
+                  <p class="contato_p">
                     Seg a Sext: 09:00 as 18:00<br>
                     Sab: 09:00 as 12:00<br>
                   </p>
                 </div>
-                <br>
                 <div class="contato_horario">
-                  <h3>Siganos:</h3>
-                  <p>
+                  <h3 class="contato_horario_h3">Siganos:</h3>
+                  <p class="contato_horario_p">
                     <img src="img/logo_facebook.png">
                     <img src="img/logo_instagram.png">
                   </p>
