mudanca do css para tablets e smartphones, pagina contato

--- a/contato.html
+++ b/contato.html
@@ -98,8 +98,23 @@
                 </div>
                 
               </div>
+          </div><!-- fim row -->
+          <div class="row  form_contato">
+            <div class="col-md-3">
+              O que você precisa?
+            </div>
+            <div class="col-md-9">
+              <form method="POST">
+                <input type="text" name="nome" placeholder="Nome">
+                <input type="email" name="email" placeholder="Email">
+                <input type="text" name="assunto" placeholder="Assunto">
+                <br>
+                <textarea name="mensagem" placeholder="Mensagem"></textarea>
+                <br>
+                <input type="submit"value="Enviar Mensagem">
+              </form>
+            </div>
           </div>
-
       </div><!-- fim container -->
 
 
