criacao de novas paginas e novo css da pagina contato

--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -105,11 +105,11 @@
             <div class="col-md-4 linha">
               <ul>
                 <li><a href="#">Bem Vindo</a></li>
-                <li><a href="#about">Consultoria Online</a></li>
-                <li><a href="#contact">Sobre Nós</a></li>
-                <li><a href="#contact">Trabalhos</a></li>
-                <li><a href="#contact">Parceiros</a></li>
-                <li><a href="#contact">Contato</a></li>
+                <li><a href="consultoria.html">Consultoria Online</a></li>
+                <li><a href="sobre_nos.html">Sobre Nós</a></li>
+                <li><a href="trabalhos.html">Trabalhos</a></li>
+                <li><a href="parceiros.html">Parceiros</a></li>
+                <li><a href="contato.html">Contato</a></li>
               </ul>
             </div>
             <div class="col-md-4">
