mudanca de imagens

--- a/consultoria.html
+++ b/consultoria.html
@@ -72,15 +72,15 @@
           Entre em contato conosco:
         </p>
         <div class="row">
-          <div class="col-md-4 text-center">
+          <div class="col-sm-4 text-center">
             <h2>Reuniões Via:</h2>
-            <img src="img/skype.png"><br>
+            <img src="img/skype.jpg"><br>
           </div>
-          <div class="col-md-4 text-center">
-              <h2>Mensagens por:</h2>
+          <div class="col-sm-4 text-center">
+              <h2>Mensagens:</h2>
               <img src="img/watts.png"><br>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-sm-4 text-center">
               <h2>Projetos por:</h2>
               <img src="img/mail.png"><br>
           </div>
