--- a/consultoria.html
+++ b/consultoria.html
@@ -73,16 +73,16 @@
         </p>
         <div class="row">
           <div class="col-sm-4 text-center">
-            <h2>Reuniões Via:</h2>
             <img src="img/skype.jpg"><br>
+            <h3>hellen.costa</h3>
           </div>
           <div class="col-sm-4 text-center">
-              <h2>Mensagens:</h2>
               <img src="img/watts.png"><br>
+              <h3>(11)9999-9999</h3>
           </div>
           <div class="col-sm-4 text-center">
-              <h2>Projetos por:</h2>
               <img src="img/mail.png"><br>
+              <h3>hellen.costa@gamil.com</h3>
           </div>
         </div> <!-- fim row trabalhamos com: -->
 
