--- a/trabalhos.html
+++ b/trabalhos.html
@@ -64,24 +64,74 @@
         </div>
       </nav>
 
-      <div class="container sobre_nos lista_trabalho">
+      <div class="container sobre_nos">
 
         <h3>Nossas realizações:</h3>
-        <p> 
-          <a href="#">Comercial</a> 
-          <a href="#">Recidencial</a> 
-          <a href="#">Público</a> 
-        </p>
-        <div class="row">
-          <div class="col-sm-4 text-center">
-            <img src="img/skype.jpg"><br>
-          </div>
-          <div class="col-sm-4 text-center">
-              <img src="img/watts.png"><br>
-          </div>
-          <div class="col-sm-4 text-center">
-              <img src="img/mail.png"><br>
-          </div>
+        <div class="realizacoes">
+        <!-- Nav tabs -->
+              <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active">
+                  <a href="#home" aria-controls="home" role="tab" data-toggle="tab">Comercial</a>
+                </li>
+                <li role="presentation">
+                  <a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Residencial</a>
+                </li>
+                <li role="presentation">
+                  <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Publico</a>
+                </li>
+              </ul>
+
+              <!-- Tab panes -->
+              <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home">
+                  <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img src="img/admed.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/digital.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/domestica.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/dry.png" class="images_parceiros"><br>
+                      </div>
+                  </div> <!-- fim row trabalhamos com: -->
+                </div>
+                <div role="tabpanel" class="tab-pane" id="profile">
+                  <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img src="img/admed.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/digital.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/domestica.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/dry.png" class="images_parceiros"><br>
+                      </div>
+                  </div> <!-- fim row trabalhamos com: -->
+                </div>
+                <div role="tabpanel" class="tab-pane" id="messages">
+                  <div class="row">
+                      <div class="col-sm-3 text-center">
+                        <img src="img/admed.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/digital.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/domestica.png" class="images_parceiros"><br>
+                      </div>
+                      <div class="col-sm-3 text-center">
+                          <img src="img/dry.png" class="images_parceiros"><br>
+                      </div>
+                  </div> <!-- fim row trabalhamos com: -->
+                </div>
+              </div>
         </div> <!-- fim row trabalhamos com: -->
 
       </div><!-- fim container -->
@@ -125,6 +175,7 @@
       <!-- Placed at the end of the document so the pages load faster -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>
+      <script src="js/helen.js"></script>
       <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
       <script src="js/ie10-viewport-bug-workaround.js"></script>
 </body>
